Agregando notacion Swagger y refactorizando ProductPriceController y CurrencyController
